Sat Jul 30 10:58:10 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* vm.c (th_init): preallocate alternative stack.
	  NoMemoryError is better than rb_bug, of course.
	  Patch by Eric Wong. [ruby-core:38572][ruby-core:38594].

	* signal.c (rb_register_sigaltstack): ditto.

	* vm_core.h: moved ALT_STACK_SIZE definition from signal.c.
	* vm.c (thread_free): use xfree() instead of free().

Sat Jul 30 07:20:49 2011  Tanaka Akira  <akr@fsij.org>

	* ext/socket/lib/socket.rb (udp_server_sockets): unused variable
	  removed.
	  patch by Jeremy Evans.  [ruby-core:38600]

Fri Jul 29 23:56:32 2011  Tanaka Akira  <akr@fsij.org>

	* lib/securerandom.rb: call OpenSSL::Random.seed at the
	  SecureRandom.random_bytes call.
	  based on the patch by Masahiro Tomita.  [ruby-dev:44270]

Fri Jul 29 20:48:39 2011  Tanaka Akira  <akr@fsij.org>

	* ext/socket/mkconstants.rb: fix typos.

Fri Jul 29 20:28:56 2011  Tanaka Akira  <akr@fsij.org>

	* ext/socket/mkconstants.rb: use whitespaces as a separator.

Fri Jul 29 18:59:07 2011  Tanaka Akira  <akr@fsij.org>

	* ext/socket/mkconstants.rb: add documents for constants.
	  patch by Eric Hodel.  [ruby-core:37853] [Bug #4989]

Mon Jul 25 23:51:01 2011  Yusuke Endoh  <mame@tsg.ne.jp>

	* backport r32671 from trunk.

	* proc.c: pre-allocate the unlinked_method_entry_list_entry struct to
	  avoid memory allocation during GC.  based on a patch from Eric Wong.
	  [ruby-core:38498]

Mon Jul 25 22:36:11 2011  Yusuke Endoh  <mame@tsg.ne.jp>

	* backport r32669 from trunk.

	* proc.c (struct METHOD), gc.c (gc_marks), vm_method.c
	  (rb_gc_mark_unlinked_live_method_entries): fix SEGV bug.
	  rb_method_entry_t was free'd even when the method is still on the
	  stack if it is BMETHOD (i.e., Method#call).  This is because
	  rb_method_entry_t is embedded in struct METHOD.  This commit
	  separates them and marks the live method entries.
	  See [ruby-core:38449] in detail.  fix [Bug #5047] [ruby-core:38171]
