@@ -17,7 +17,7 @@ end
 
 class Float < Numeric
   # call-seq:
-  #     flt.to_d  -> bigdecimal
+  #     flt.to_d(precision=nil)  -> bigdecimal
   #
   # Convert +flt+ to a BigDecimal and return it.
   #
@@ -83,11 +83,12 @@ end
 
 class Rational < Numeric
   # call-seq:
-  #   r.to_d        -> bigdecimal
   #   r.to_d(sig)   -> bigdecimal
   #
   # Converts a Rational to a BigDecimal. Takes an optional parameter +sig+ to
   # limit the amount of significant digits.
+  # If a negative precision is given, raise ArgumentError.
+  # The zero precision and implicit precision is deprecated.
   #
   #   r = (22/7.0).to_r
   #   # => (7077085128725065/2251799813685248)
@@ -95,9 +96,12 @@ class Rational < Numeric
   #   # => #<BigDecimal:1a52bd8,'0.3142857142 8571427937 0154144999 105E1',45(63)>
   #   r.to_d(3)
   #   # => #<BigDecimal:1a44d08,'0.314E1',18(36)>
-  def to_d(precision)
-    if precision <= 0
+  def to_d(precision=0)
+    if precision < 0
       raise ArgumentError, "negative precision"
+    elsif precision == 0
+      warn "zero and implicit precision is deprecated."
+      precision = BigDecimal.double_fig*2+1
     end
     num = self.numerator
     BigDecimal(num).div(self.denominator, precision)
